--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
 			<version>2.1.0</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>2.1.8.RELEASE</version>
+		</dependency>
 
 
 		<dependency>
