--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,15 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 
 # logger
 logging.level.com.jnucc.community=debug
+
+# EmailProperties
+spring.mail.host=smtp.sina.com
+spring.mail.port=465
+spring.mail.username=kuangyl0212@sina.com
+spring.mail.password=91e39d46b5799894
+spring.mail.protocol=smtps
+spring.mail.properties.mail.smtp.ssl.enable=true
+
+# Community
+community.protocol=http
+community.domain=localhost:8080
