finish user setting

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,5 +33,6 @@ spring.mail.protocol=smtps
 spring.mail.properties.mail.smtp.ssl.enable=true
 
 # Community
-community.protocol=http
-community.domain=localhost:8080
+#community.protocol=http
+community.domain=http://localhost:8080
+community.upload=/home/agent/workspace/community/data/upload/
