finish error redirect

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # ServerProperties
 server.port=8080
 #server.servlet.context-path=/community
+server.error.whitelabel.enabled=false
 
 # ThymeleafProperties
 spring.thymeleaf.cache=false
